# calculator

./: .coveragerc  .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
data/: equations.csv
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: luokkakaavio-monopoli.md  sekvenssikaavio-t3.md  sekvenssikaavio-t4.md  sekvenssiokaavio-t3.md
src/: config.py  index.py
src/entities/: equation.py  result.py
src/repositories/: equation_repository.py  result_repository.py
src/services/: calculator_service.py  stats_service.py
src/tests/repositories/: equation_repository_test.py  result_repository_test.py
src/tests/services/: calculator_service_test.py  stats_service_test.py
src/ui/: calculator_view.py  gui.py  history_view.py  new_ui.py  stats_view.py  ui.py
